--- a/index.html
+++ b/index.html
@@ -2,15 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B13-A02-TECHWAVE</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="font-inter ">
     
-    <header><nav>
-        <h2>hello jinat</h2>
+    <header><nav class="navber">
+        <div>
+            <h1 class="techwave">Tech<span>Wave</span></h1>
+        </div>
+        <div class="nav-mid">
+            <ul >                        
+                <li><a href="">About</a></li>
+                <li><a href="">Episodes</a></li>
+                <li><a href="">Host</a></li>
+            </ul>
+        </div>
+        <div>
+            <button class="btn1">Subscribe <span class="arrow">→</span></button>
+        </div>
     </nav></header>
+    <main>
+        <section>
+            <header class="up-container">
+                <div class="container-1">
+                    <div class="hero-1"><img class="mid" src="./assets/microphone.png" alt=""><span class="img-up">NEW</span></div>
+                    <h2></h2>
+                    <p></p>
+                    <div>
+                        <ul>
+                            <li><button><img src="./assets/spotify.png" alt="">Listen on Spotify</button></li>
+                            <li><button><img src="./assets/message.png" alt="">Subscribe</button></li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
+        </section>
+
+
+    </main>
     
 </body>
 </html>
